--- a/XFramework.Site.Home/Areas/Front/Views/Shared/_ProductLayout.cshtml
+++ b/XFramework.Site.Home/Areas/Front/Views/Shared/_ProductLayout.cshtml
@@ -10,16 +10,13 @@
 <span class="box_10"></span>
 <div class="main">
     <div class="left_box">
-        @*<h2>
-            <img src="@ViewBag.RootCategoryInfo.BannerAdImageUrl" alt="@ViewBag.RootCategoryInfo.Name"/></h2>
-        <span class="box_10"></span>*@
         <ul class="about_list2">
-            @Html.Action("SubCategoryListForChannelPage", "Channel", new { rootId = ViewBag.RootCategoryInfo.Id, selectedId = ViewBag.CurrentCategoryInfo.Id, language = PageData["Language"] })
+            @Html.Action("SubCategoryListForChannelPage", "Channel", new { rootId = ViewBag.RootCategoryInfo.Id, selectedId = ViewBag.CurrentCategoryInfo.Id, language = PageData["Language"], url = "/product/?cid={0}#rightNav" })
         </ul>
     </div>
     <div class="right_box">
-        <p class="weizhi_bar">
-            @Html.Action("RenderSubNavForChannelPage", "Channel", new { catId = ViewBag.CurrentCategoryInfo.Id, customTitle = ViewBag.SubNavCustomTitle, language = PageData["Language"] })
+        <p class="weizhi_bar" id="rightNav">
+            @Html.Action("RenderSubNavForChannelPage", "Channel", new { catId = ViewBag.CurrentCategoryInfo.Id, customTitle = ViewBag.SubNavCustomTitle, language = PageData["Language"], url = "/product/?cid={0}#rightNav" })
         </p>
         <span class="box_10"></span>
         @RenderBody()
