--- a/XFramework.Site.Home/Areas/Front/Views/Home/Index_zh_cn.cshtml
+++ b/XFramework.Site.Home/Areas/Front/Views/Home/Index_zh_cn.cshtml
@@ -5,26 +5,29 @@
     var productService = ViewBag.ProductService;
 }
 @section header{
+    <link href="@Url.Content("~/styles/ticker.css")" rel="stylesheet" type="text/css" />
     <style type="text/css">
         .slidesjs-pagination {      margin: 3px 0 0;      float: right;      list-style: none;    }
         .slidesjs-pagination li {      float: left;      margin: 0 1px;    }
         .slidesjs-pagination li a {      	cursor : pointer;	display : inline;	filter : alpha(opacity=80);	float : left;	font-size : 14px;	height : 15px;	line-height : 15px;	margin-left : 2px;	opacity : 0.8;	overflow : hidden;	text-align : center;	width : 15px;border:1px solid gray;background-color:#fff;color:#000;    }
         .slidesjs-pagination li a.active{background : #3c3c3c;	color : #fff; }
     </style>
+
     <script type="text/javascript">
         _GLOBAL.rootId = -1;
     </script>
     <script src="@Url.Content("~/scripts/jquery.slides.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/scripts/jquery.ticker.js")" type="text/javascript"></script>
 }
 <div class="hotnews_bg">
     <div id="hotnews_search_bar">
         <div class="hotnews_bar">
             <p style="float:left;"><strong>公告： </strong></p>
             <div id="notice" style="float:left;">
-                <ul class="notice-list">
+                <ul id="js-news" class="js-hidden notice-list">
                     @foreach (var item in ViewBag.NoticeList)
                     {
-                        <a href="@item.Item2" title="@item.Item1">@item.Item1</a>
+                        <li class="news-item"><a href="@item.Item2" title="@item.Item1">@item.Item1</a></li>
                     }
                 </ul>
             </div>
@@ -40,19 +43,19 @@
             <ul class="focus-pic-list" id="product-slide">
                 @foreach (var item in productService)
                 {
-                    <a href="@item.Url" title="@item.Name">
-                        <img data-src="@item.ImageUrl" src="http://placehold.it/730x304&text=@(new Random().Next(0,10))" alt="@item.Name" /></a>
+                    <a href="/product/?cid=@(item.Id)" title="@item.Name">
+                        <img data-src="@item.ImageUrl" src="@item.ImageUrl" alt="@item.Name" /></a>
                 }
             </ul>
         </div>
         <div class="products_nav">
             <h2>
-                产品与服务</h2>
+                产品展示</h2>
             <ul class="focus-text-list" id="product-slide-text">
                 @{
                     for (int i = 0; i < productService.Count; i++)
                     { 
-                    <li@Html.Raw(i == 0 ? " class=\"on\"" : "")><a href="@productService[i].Url" title="@productService[i].Name">@productService[i].Name</a></li>
+                    <li@Html.Raw(i == 0 ? " class=\"on\"" : "")><a href="/product/?cid=@productService[i].Id" title="@productService[i].Name">@productService[i].Name</a></li>
                     }
                 }
             </ul>
@@ -67,17 +70,16 @@
             <!--焦点图-->
             <div id="focus-slide">
                 @foreach (var item in ViewBag.FocusImageList)
-                    { 
+                { 
                         <a href="@item.Url" title="@item.Title">
                             <img src="@item.ImageUrl" alt="@item.Title" width="210px" height="170px" /></a>
-                    }
+                }
             </div>
             <!--焦点图 /-->
         </div>
         <div id="company_industry_news">
             <ul class="CInews_title switch-nav-news">
-                <li class="on"><a href="/channel/14.html" class="white">企业新闻</a></li>
-                <li><a href="/channel/15.html">行业新闻</a></li>
+                <li class="on"><a href="/channel/6.html" class="white">新闻动态</a></li>
             </ul>
             <span class="box_5"></span>
             <div class="switch-content-news">
@@ -93,21 +95,11 @@
                     }
                     <span class="clear"></span>
                 </ul>
-                <ul class="CI_newslist" style="display: none">
-                    @foreach (var item in ViewBag.IndustryNews)
-                    { <li>
-                        <div class="CI_newslist_l">
-                            <a href="@item.Url" class="gray" title="@item.Title">@Goodspeed.Common.CharHelper.Truncate(item.Title, 30)</a></div>
-                        <p class="CI_newsdate">
-                            @item.PublishDateTime.ToString("yyyy-MM-dd")</p>
-                        <span class="clear"></span></li>}
-                    <span class="clear"></span>
-                </ul>
             </div>
         </div>
         <div id="Results_bar">
             <h2>
-                企业业绩</h2>
+                技术资料</h2>
             <span class="box_5"></span>
             <ul class="Resultslist">
                 @foreach (var item in ViewBag.Business)
@@ -123,6 +115,10 @@
     <span class="box_10"></span>
 </div>
 @section scriptready{
+    $('#js-news').ticker({
+        controls: false,
+        titleText: ''
+    });
     $('#focus-slide').slidesjs({
         width: 210,
         height: 170,
